--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Iván Guevara & Federico Scarpa",
   "dependencies": {
     "babel": "^5.6.14",
+    "lazy.js": "^0.4.0",
     "lodash": "^3.10.0",
     "readline": "0.0.8"
   }
